Fixing Fonts to make them more readable

--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -317,7 +317,7 @@ figcaption {
 
 
 .folklore {
-	font-family: 'SkennertonFraktur', serif;
+	font-family: 'Fondamento', serif;
 	background-color: #e1cfb6;
 	margin: auto;
 	padding: 2rem 3rem 1rem 3rem;
